# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  MANIFEST.in  Makefile  Pipfile  README.md  build.sh  generate_requirements.py  pipfile_requirements.txt  pyproject.toml  setup.py
.github/workflows/: build_checks.yml  release.yml
hooks/: clang_format.sh  dev_marker.sh  dev_marker_hook.py  isort.sh  isort_hook.py  mypy.sh  mypy_hook.py  pylint.sh  pylint_hook.py  symbolic_links.sh  utils.sh  xenon.sh  xenon_hook.py  yapf_hook.py
personal_pre_commit_hooks/: pyproject.toml
personal_pre_commit_hooks/configs/: isort.cfg  yapf_style
personal_pre_commit_hooks/hooks/: clang_format.sh  clang_format_hook.py  dev_marker_hook.py  isort_hook.py  line_endings_hook.py  mypy_hook.py  pylint_hook.py  symbolic_links.sh  xenon_hook.py  yapf_hook.py
personal_pre_commit_hooks/utilities/: argparse.py  constants.py  git.py  logger.py  models.py  output_utils.py  proc.py  utils.sh
tools/: get_project_version.py
utilities/: argparse.py  constants.py  git.py  logger.py
