[tool.poetry]
name = "pre-commit-hooks"
version = "0.3.0"
description = ""
authors = ["SheyDenis <denis.sheyer@gmail.com>"]
readme = "README.md"
license = "UNLICENSE"

packages = [{ include = "personal_pre_commit_hooks/" }]

[tool.poetry.dependencies]
python = "^3.11"

isort = "*"
mypy = "*"
pre-commit = "*"
pylint = "*"
xenon = "*"
yapf = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
toml = "*"
types-toml = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clang_format_hook = 'personal_pre_commit_hooks.hooks.clang_format_hook:main'
dev_marker_hook = 'personal_pre_commit_hooks.hooks.dev_marker_hook:main'
isort_hook = 'personal_pre_commit_hooks.hooks.isort_hook:main'
line_endings_hook = 'personal_pre_commit_hooks.hooks.line_endings_hook:main'
mypy_hook = 'personal_pre_commit_hooks.hooks.mypy_hook:main'
pylint_hook = 'personal_pre_commit_hooks.hooks.pylint_hook:main'
xenon_hook = 'personal_pre_commit_hooks.hooks.xenon_hook:main'
yapf_hook = 'personal_pre_commit_hooks.hooks.yapf_hook:main'
